--- a/css/media.css
+++ b/css/media.css
@@ -1,20 +1,86 @@
 @media (min-width:1400px) {
+  #typingText {
+    font-size: 2.5rem;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid white;
+    width: fit-content;
+  }
+  
+  .blink {
+    animation: blinkCursor 0.7s step-end infinite;
+  }
+  
+  @keyframes blinkCursor {
+    50% {
+      border-color: transparent;
+    }
+  }
   
 }
 @media (min-width:1200px) and (max-width:1399px){
+  #typingText {
+    font-size: 2.5rem;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid white;
+    width: fit-content;
+  }
+  
+  .blink {
+    animation: blinkCursor 0.7s step-end infinite;
+  }
+  
+  @keyframes blinkCursor {
+    50% {
+      border-color: transparent;
+    }
+  }
   
 }
 @media (min-width:992px) and (max-width:1199px){
-   
+  #typingText {
+    font-size: 2.5rem;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid white;
+    width: fit-content;
+  }
+  
+  .blink {
+    animation: blinkCursor 0.7s step-end infinite;
+  }
+  
+  @keyframes blinkCursor {
+    50% {
+      border-color: transparent;
+    }
+  }
+  
 }
 @media (min-width:768px) and (max-width:991px){
-   
+  #typingText {
+    font-size: 2.5rem;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid white;
+    width: fit-content;
+  }
+  
+  .blink {
+    animation: blinkCursor 0.7s step-end infinite;
+  }
+  
+  @keyframes blinkCursor {
+    50% {
+      border-color: transparent;
+    }
+  }
+  
 }
 @media (min-width:576px) and (max-width:767px){
  
 }
 @media (max-width:576px){
-    .banner{
-        height: 100vh;
-      }
+    
 }
