--- a/Pakistan/style.css
+++ b/Pakistan/style.css
@@ -1,6 +1,14 @@
 .flag{
     background-color: #106A37;
 }
+.custom-nav {
+  border-bottom: 3px solid rgb(5, 5, 5);
+  transition: border-bottom 0.3s ease, opacity 0.3s ease;
+}
+
+.custom-nav.hide-line {
+  border-bottom: none;
+}
 .section-title {
   font-weight: bold;
   font-size: 2.5rem;
@@ -84,14 +92,20 @@ color: #666;
 .Text{
 font-weight: 700;
 
-text-shadow: 0 4px 6px rgba(0, 0, 0, 0.961)
+text-shadow: 0 6px 10px rgba(0, 0, 0, 0.961)
 }
 .Text1{
 margin-top: 10px;
 font-weight: 700;
 font-size: 35px;
-text-shadow: 2px 2px 5px rgb(74, 71, 71);
+text-shadow: 4px 6px 10px rgb(74, 71, 71);
 }
+.Text5{
+  margin-top: 10px;
+  font-weight: 700;
+  font-size: 35px;
+  text-shadow: 2px 6px 10px rgb(248, 244, 244);
+  }
 
 .Text2{
 
