--- a/Pakistan/style.css
+++ b/Pakistan/style.css
@@ -145,3 +145,9 @@ h2{
   height: 55px;
   width: auto; /* Preserve the logo aspect ratio */
 }
+
+
+
+.navbar-brand img{
+  filter: brightness(0) invert(1);
+}
