--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,19 @@ footer {
 .navbar-brand img{
   filter: brightness(0) invert(1);
 }
+
+
+
+#typingText {
+  font-size: 4em !important; /* Increased font size */
+  color: white;
+  text-shadow:
+    -1px -1px 0 #000,
+     1px -1px 0 #000,
+    -1px  1px 0 #000,
+     1px  1px 0 #000,
+    -2px  0px 0 #000,
+     2px  0px 0 #000,
+     0px -2px 0 #000,
+     0px  2px 0 #000;
+}
